# sandsim

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: main.cpp
src/elements/: air.hpp  sand.hpp  wall.hpp  water.hpp
src/world/: grid.cpp  grid.hpp
